2006-07-25  Robert Schuster <robertschuster@fsfe.org>

	* java/awt/peer/gtk/CairoGraphics.java:
	(drawLine): Added special case for 1 pixel lines.

2006-07-25  Robert Schuster <robertschuster@fsfe.org>

        Fixes PR27844.
	* java/awt/peer/gtk/CairoGraphics.java:
	(drawLine): Removed calls to shifted().

2006-07-25  Robert Schuster <robertschuster@fsfe.org>

	* javax/swing/JTabbedPane.java:
	(remove(Component)): Rewritten.
	(setSelectedIndex): Implemented updating of component visibility state.

2006-07-25  Sven de Marothy  <sven@physto.se>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkVolatileImage.c
	(init): Default to the actual depth in the worst case.
	
	* java/awt/Font.java
	(createFont(int, File)): New method.
	
2006-07-25  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	Fixes bug #28413
	* gnu/java/util/regex/RETokenEnd.java(check_java_line_terminators):
	New field.
	(RETokenEnd): New constructer to set check_java_line_terminators.
	(matchThis): Checck line terminators if check_java_line_terminators.
	* gnu/java/util/regex/RETokenStart.java: Likewise.
	* gnu/regexp/RE.java(initialize): Use the new constructors for
	RETokenEnd and RETokenStart if REG_MULTILINE is set.
	* java/util/regex/Pattern.java(Patteren): Changed so that
	gnu/regexp/RE.java may use the new the new constructors.

2006-07-25  Roman Kennke  <kennke@aicas.com>

	* java/awt/Container.java
	(focusTraversalPolicyProvider): New field.
	(isFocusTraversalPolicyProvider): New method.
	(setFocusTraversalPolicyProvider): New method.
	* java/awt/ContainerOrderFocusTraversalPolicy.java
	(getFirstComponent): Use accept() instead of lengthy checks.
	Don't fetch getComponents() to avoid copying of array.
	Traverse down the hierarchy to find the first focused component.
	* java/awt/DefaultKeyboardFocusManager.java
	(dispatchEvent): Let the initial component request focus.

2006-07-25  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/text/Segment.java