@@ -1,3 +1,12 @@
+2006-07-25  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* javax/management/MBeanConstructorInfo.java:
+	New file.
+	* javax/management/MBeanNotificationInfo.java:
+	Documentation fix.
+	* javax/management/MBeanParameterInfo.java:
+	New file.
+
 2006-07-25  Robert Schuster <robertschuster@fsfe.org>
 
 	* java/awt/peer/gtk/CairoGraphics.java:
